<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">simplemath</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="value1">Enter First Value</string>
    <string name="value2">Enter Second Value</string>
    <string name="result">Result</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>

</resources>